(1) Replaced long list radio buttons for file names in image_format.php with a pull-down menu. (2) Corrected erratic Javascript behavior when file formats were selected. (3) Changed the style associated to <select> elements: now with "width: 100%" and "text-align: center".

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -710,6 +710,10 @@ input.noPreview {
     background: url(../images/no_preview.jpg) no-repeat center;
 }
 
+select {
+    width: 100%;
+    text-align: center;
+}
 
 span.multichannel {
     margin-left: -8px;
